add file uploading and URL capturing

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,10 +12,14 @@
       https://cdn.jsdelivr.net/npm/asciinema-player@3.10.0/dist/bundle/asciinema-player.min.css
       " rel="stylesheet">
 
+    <link href="https://cdn.datatables.net/v/se/jq-3.7.0/dt-2.3.2/datatables.min.css" rel="stylesheet" integrity="sha384-gqX1VQRmkVGcnZNcMQl0noX9V20ZwnofRi+HxA+koD2oAFP7qChw7BhoZkhwtXNB" crossorigin="anonymous">
+    <script src="https://cdn.datatables.net/v/se/jq-3.7.0/dt-2.3.2/datatables.min.js" integrity="sha384-YtBY9VBnygl50Y7z3ecHoy2AV6bVsaGerOr0KxEiQG/0d7nGkddUyUCD9sRoJDCb" crossorigin="anonymous"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.6/dist/htmx.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.4/dist/semantic.min.css">
     <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.4/dist/semantic.min.js"></script>
+
 
     <style>
     /* Make the grid take the full height of the viewport */
