refactor with new details

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
 
     <div class="ui grid">
 
-      <div class="three wide column sidebar-column">
+      <div class="three wide column sidebar-column" style="max-width: 200px;">
 
         <div class="ui vertical inverted fluid menu" style="height: 100%; border-radius: 0;">
           <div class="item">
